# odxtools

./: .gitattributes  .gitignore  CONTRIBUTING.md  CONTRIBUTORS_LICENSE_AGREEMENT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  logger.py  main.py  pyproject.toml  pyrightconfig.json  reformat-source.sh  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: tests.yml
doc/: .gitignore  conf.py  getting_started.rst  index.rst
doc/_build/html/: .buildinfo  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: README.md  __init__.py  isotp_send.py  mksomersaultmodifiedpdx.py  mksomersaultpdx.py  pdxcopy.py  somersault.pdx  somersault_modified.pdx  somersaultecu.py  somersaultlazy.py
examples/data/: ISO_11898_2_DWCAN.odx-cs  ISO_15765_2.odx-cs  SAE_J2411_SWCAN_CPSS.odx-cs
odxtools/: __init__.py  __main__.py  additionalaudience.py  addrdeffilter.py  addrdefphyssegment.py  addressing.py  admindata.py  audience.py  basecomparam.py  basecomparamspec.py  basefunctionnode.py  basevariantmatcher.py  basevariantpattern.py  basicstructure.py  checksum.py  checksumresult.py  codec.py  commrelation.py  commrelationvaluetype.py  communicationparameter.py  communicationparameterref.py  companydata.py  companydocinfo.py  companyrevisioninfo.py  companyspecificinfo.py  comparam.py  comparam_subset.py  comparaminstance.py  comparamspec.py  comparamsubset.py  complexcomparam.py  complexcomparamspec.py  complexdop.py  componentconnector.py  compositecodec.py  compumethods.py  configdata.py  configdatadictionaryspec.py  configiditem.py  configitem.py  (+234 more)
odxtools/cli/: .coverage  .gitignore  __init__.py  _parser_utils.py  _print_utils.py  browse.py  compare - Copy.py  compare.py  compare_html.py  compare_parallel.py  decode.py  dummy_sub_parser.py  find.py  list.py  main.py  snoop.py
odxtools/compumethods/: __init__.py  compucategory.py  compucodecompumethod.py  compuconst.py  compudefaultvalue.py  compuinternaltophys.py  compuinversevalue.py  compumethod.py  compumethodbase.py  compuphystointernal.py  compurationalcoeffs.py  compuscale.py  createanycompumethod.py  identicalcompumethod.py  intervaltype.py  limit.py  linearcompumethod.py  linearsegment.py  ratfunccompumethod.py  ratfuncsegment.py  readcompumethod.py  scalelinearcompumethod.py  scaleratfunccompumethod.py  tabintpcompumethod.py  texttablecompumethod.py
odxtools/diaglayers/: basevariant.py  basevariantraw.py  diaglayer.py  diaglayerraw.py  diaglayertype.py  ecushareddata.py  ecushareddataraw.py  ecuvariant.py  ecuvariantraw.py  functionalgroup.py  functionalgroupraw.py  hierarchyelement.py  hierarchyelementraw.py  protocol.py  protocolraw.py
odxtools/parameters/: __init__.py  codedconstparameter.py  createanyparameter.py  dynamicparameter.py  lengthkeyparameter.py  matchingrequestparameter.py  nrcconstparameter.py  parameter.py  parameterbase.py  parameterwithdop.py  physicalconstantparameter.py  readparameter.py  reservedparameter.py  rowfragment.py  systemparameter.py  tableentryparameter.py  tablekeyparameter.py  tablestructparameter.py  valueparameter.py
odxtools/pdx_stub/: ISO_11898_3_DWFTCAN.odx-cs  ISO_15765_3_CPSS.odx-cs  UDSOnCAN_CPS.odx-c  comparam-subset.odx-cs.tpl  diag_layer_container.odx-d.tpl  index.xml.tpl
odxtools/pdx_stub/macros/: printAdminData.tpl  printAudience.tpl  printCompanyData.tpl  printComparam.tpl  printComparamRef.tpl  printDOP.tpl  printDiagnosticTroubleCode.tpl  printElementID.tpl  printEndOfPdu.tpl  printEnvData.tpl  printEnvDataDesc.tpl  printFunctionalClass.tpl  printMux.tpl  printParam.tpl  printParentRef.tpl  printRequest.tpl  printResponse.tpl  printService.tpl  printSingleEcuJob.tpl  printStructure.tpl  printTable.tpl  printUnitSpec.tpl  printVariant.tpl
odxtools/templates/: comparam-spec.odx-c.xml.jinja2  comparam-spec.odx-cs.xml.jinja2  comparam-subset.odx-cs.xml.jinja2  diag_layer_container.odx-d.xml.jinja2  ecu_config.odx-e.xml.jinja2  flash.odx-f.xml.jinja2  function_dictionary.odx-fd.xml.jinja2  index.xml.jinja2  index.xml.xml.jinja2  multiple-ecu-job-spec.odx-m.xml.jinja2  vehicle_info_spec.odx-v.xml.jinja2
odxtools/templates/macros/: printAdminData.xml.jinja2  printAudience.xml.jinja2  printBaseVariant.xml.jinja2  printBaseVariantPattern.xml.jinja2  printBasicStructure.xml.jinja2  printChecksum.xml.jinja2  printCompanyData.xml.jinja2  printComparam.xml.jinja2  printComparamRef.xml.jinja2  printComparamSpec.xml.jinja2  printComponentConnector.xml.jinja2  printCompuMethod.xml.jinja2  printConfigData.xml.jinja2  printConfigDataDictionarySpec.xml.jinja2  printConfigItems.xml.jinja2  printConfigRecord.xml.jinja2  printDOP.xml.jinja2  printDataRecord.xml.jinja2  printDatablock.xml.jinja2  (+63 more)
pdx_files_folder/: somersault.pdx  somersault_modified.pdx
tests/: __init__.py  test_cli.py  test_compu_methods.py  test_decoding.py  test_diag_coded_types.py  test_diag_data_dictionary_spec.py  test_ecu_config.py  test_ecu_variant_matching.py  test_ecu_variant_patterns.py  test_encoding.py  test_flash.py  test_function_dictionary.py  test_multiple_ecu_jobs.py  test_odxtools.py  test_odxtypes.py  test_pickle_db.py  test_readparameters.py  test_shell_tools.py  test_singleecujob.py  test_somersault.py  test_statemachine.py  test_unit_spec.py  test_utils.py  test_variant_matching.py  test_variant_patterns.py  test_vehicle_info_spec.py  test_weakref.py
(+4 files in other folders)
